fix project config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,10 @@ authors = [
 requires-python = ">=3.9"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent"
 ]
+license = "Apache-2.0"
+license-files = ["LICEN[CS]E*"]
 
 dependencies = [
     "python-can",
@@ -37,7 +38,7 @@ pycantoether = "pycantoether.server:main"
 
 [tool.setuptools.dynamic]
 version = {attr = "pycantoether.__version__"}
-readme = {file = ["README.md"]}
+readme = {file = ["README.md"], content-type = "text/markdown"}
 
 [tool.setuptools.packages.find]
 where = ["."]
